JBR-4106 PyCharm hangs with 100% CPU usage on one core