@@ -1,139 +1,136 @@
+// Copyright 2000-2022 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+
 import java.awt.*;
-import javax.swing.*;
-import java.awt.event.WindowAdapter;
-import java.awt.event.WindowEvent;
-import java.util.concurrent.CountDownLatch;
-import java.util.concurrent.TimeUnit;
+import java.util.Arrays;
+import java.util.concurrent.*;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.concurrent.locks.Condition;
-import java.util.concurrent.locks.ReentrantLock;
+import java.util.function.Supplier;
 
 import sun.lwawt.macosx.CThreading;
 import sun.lwawt.macosx.LWCToolkit;
 import sun.awt.AWTThreading;
 
+import static helper.ToolkitTestHelper.*;
+
 /*
  * @test
- * @summary tests that AWTThreading can manage a stream of cross EDT/AppKit invocation requests
+ * @summary tests that AWTThreading can manage cross EDT/AppKit blocking invocation requests
  * @requires (os.family == "mac")
- * @compile --add-exports=java.desktop/sun.lwawt.macosx=ALL-UNNAMED --add-exports=java.desktop/sun.awt=ALL-UNNAMED AWTThreadingTest.java
- * @run main/othervm --add-exports=java.desktop/sun.lwawt.macosx=ALL-UNNAMED --add-exports=java.desktop/sun.awt=ALL-UNNAMED AWTThreadingTest
+ * @modules java.desktop/sun.lwawt.macosx java.desktop/sun.awt
+ * @run main AWTThreadingTest
  * @author Anton Tarasov
  */
+@SuppressWarnings("ConstantConditions")
 public class AWTThreadingTest {
-    static final ReentrantLock LOCK = new ReentrantLock();
-    static final Condition COND = LOCK.newCondition();
-    static final CountDownLatch LATCH = new CountDownLatch(1);
+    static final int TIMEOUT_SEC = 1;
 
-    static JFrame frame;
-    static Thread thread;
+    static final AtomicInteger ITER_COUNTER = new AtomicInteger();
+    static final AtomicBoolean DUMP_STACK = new AtomicBoolean(false);
 
-    final static AtomicBoolean passed = new AtomicBoolean(true);
-    final static AtomicInteger counter = new AtomicInteger(0);
+    static volatile Thread THREAD;
 
-    public static void main(String[] args) throws InterruptedException {
-        EventQueue.invokeLater(AWTThreadingTest::runGui);
+    public static void main(String[] args) {
+        DUMP_STACK.set(args.length > 0 && "dumpStack".equals(args[0]));
 
-        LATCH.await(5, TimeUnit.SECONDS);
+        initTest(AWTThreadingTest.class, Thread.currentThread());
 
-        frame.dispose();
-        thread.interrupt();
+        test("certain threads superposition");
 
-        if (!passed.get()) {
-            throw new RuntimeException("Test FAILED!");
-        }
+        test("random threads superposition");
+
         System.out.println("Test PASSED");
     }
 
-    static void runGui() {
-        frame = new JFrame("frame");
-        frame.getContentPane().setBackground(Color.green);
-        frame.setLocationRelativeTo(null);
-        frame.setSize(200, 200);
-        frame.setDefaultCloseOperation(WindowConstants.EXIT_ON_CLOSE);
-        frame.addWindowListener(new WindowAdapter() {
-            @Override
-            public void windowOpened(WindowEvent e) {
-                startThread();
-            }
-        });
-        frame.setVisible(true);
+    static void test(String testCaseCaption) {
+        initTestCase(testCaseCaption);
+        ITER_COUNTER.set(0);
+
+        EventQueue.invokeLater(() -> startThread(FUTURE::isDone));
+
+        try {
+            FUTURE.get(TIMEOUT_SEC * 3, TimeUnit.SECONDS);
+        } catch (TimeoutException ignored) {
+            // expected result
+            FUTURE.complete(true);
+        } catch (Exception e) {
+            throw new RuntimeException("Test FAILED!");
+        }
+
+        trycatch(THREAD::join);
+
+        finishTestCase("(" + ITER_COUNTER + " iterations)");
     }
 
-    static void startThread() {
-        thread = new Thread(() -> {
-            while (true) {
-                try {
-                    Thread.sleep(100);
-                } catch (InterruptedException e) {
-                    break;
-                }
+    static void startThread(Supplier<Boolean> shouldExitLoop) {
+        THREAD = new Thread(() -> {
+
+            while (!shouldExitLoop.get()) {
+                ITER_COUNTER.incrementAndGet();
+
+                var point_1 = new CountDownLatch(1);
+                var point_2 = new CountDownLatch(1);
+                var point_3 = new CountDownLatch(1);
+                var invocations = new CountDownLatch(2);
 
                 //
-                // 1. Execute invokeAndWait() from AppKit to EDT
+                // 1. Blocking invocation from AppKit to EDT
                 //
                 CThreading.executeOnAppKit(() -> {
-                    try {
-                        LWCToolkit.invokeAndWait(counter::incrementAndGet, Window.getWindows()[0]);
-                    } catch (Exception e) {
-                        fail(e);
-                    }
+                    // We're on AppKit, wait for the 2nd invocation to be on the AWTThreading-pool thread.
+                    if (TEST_CASE == 1) await(point_1, TIMEOUT_SEC);
+
+                    trycatch(() -> LWCToolkit.invokeAndWait(() -> {
+                        // We're being dispatched on EDT.
+                        if (TEST_CASE == 1) point_2.countDown();
+
+                        // Wait for the 2nd invocation to be executed on AppKit.
+                        if (TEST_CASE == 1) await(point_3, TIMEOUT_SEC);
+                    }, FRAME));
+
+                    invocations.countDown();
                 });
 
                 //
-                // 2. Execute invokeAndBlock() from EDT to AppKit
+                // 2. Blocking invocation from EDT to AppKit
                 //
-                EventQueue.invokeLater(() -> {
-                    passed.set(false);
+                EventQueue.invokeLater(() -> AWTThreading.executeWaitToolkit(() -> {
+                    // We're on the AWTThreading-pool thread.
+                    if (TEST_CASE == 1) point_1.countDown();
 
-                    Boolean success = AWTThreading.executeWaitToolkit(() -> {
-                        try {
-                            return CThreading.executeOnAppKit(() -> Boolean.TRUE);
-                        } catch (Throwable e) {
-                            fail(e);
+                    // Wait for the 1st invocation to start NSRunLoop and be dispatched
+                    if (TEST_CASE == 1) await(point_2, TIMEOUT_SEC);
+
+                    // Perform in JavaRunLoopMode to be accepted by NSRunLoop started by LWCToolkit.invokeAndWait.
+                    LWCToolkit.performOnMainThreadAndWait(() -> {
+                        if (DUMP_STACK.get()) {
+                            dumpAllThreads();
                         }
-                        return null;
+                        // We're being executed on AppKit.
+                        if (TEST_CASE == 1) point_3.countDown();
                     });
-                    System.out.println("Success: " + counter.get() + ": " + success);
 
-                    passed.set(Boolean.TRUE.equals(success));
+                    invocations.countDown();
+                }));
 
-                    if (passed.get()) {
-                        lock(COND::signal);
-                    }
-                    else {
-                        fail(null);
-                    }
-                });
-
-                lock(COND::await);
+                await(invocations, TIMEOUT_SEC * 2);
             }
         });
-        thread.setDaemon(true);
-        thread.start();
+        THREAD.setDaemon(true);
+        THREAD.start();
     }
 
-    static void lock(MyRunnable runnable) {
-        LOCK.lock();
-        try {
-            try {
-                runnable.run();
-            } catch (Exception e) {
-                e.printStackTrace();
-            }
-        } finally {
-            LOCK.unlock();
+    static void await(CountDownLatch latch, int seconds) {
+        if (!trycatchAndReturn(() -> latch.await(seconds, TimeUnit.SECONDS), false)) {
+            FUTURE.completeExceptionally(new Throwable("Awaiting has timed out"));
         }
     }
 
-    interface MyRunnable {
-        void run() throws Exception;
-    }
-
-    static void fail(Throwable e) {
-        if (e != null) e.printStackTrace();
-        passed.set(false);
-        LATCH.countDown();
+    static void dumpAllThreads() {
+        Thread.getAllStackTraces().keySet().forEach(t -> {
+            System.out.printf("%s\t%s\t%d\t%s\n", t.getName(), t.getState(), t.getPriority(), t.isDaemon() ? "Daemon" : "Normal");
+            Arrays.asList(t.getStackTrace()).forEach(frame -> System.out.println("\t" + frame));
+        });
+        System.out.println("\n\n");
     }
 }
